# amazon-emr-serverless-image-cli

./: .gitignore  DEVELOPMENT_GUIDE.md  README.md  setup.cfg
amazon_emr_serverless_image_cli/: __main__.py
amazon_emr_serverless_image_cli/assets/: image-manifest.yaml
amazon_emr_serverless_image_cli/cli/: cli.py
amazon_emr_serverless_image_cli/commands/: validate_image.py
amazon_emr_serverless_image_cli/helper/: argument_parser.py  logging.py  manifest_reader.py  print_message.py
amazon_emr_serverless_image_cli/helper/docker_util/: docker_cl.py  docker_helper.py
amazon_emr_serverless_image_cli/validation_tool/: check_inputs.py  validation_helper.py
amazon_emr_serverless_image_cli/validation_tool/validation_models/: validation_models.py
amazon_emr_serverless_image_cli/validation_tool/validation_tests/: check_envs.py  check_files.py  check_local_job_run.py  check_manifest.py
installer/pyinstaller/: INSTRUCTION.md  build-linux.sh  build-mac.sh  build-win.bat  custom-image-validation-tool-win.spec  custom-image-validation-tool.spec  requirements.txt
tests/cli/: test_cli.py
tests/commands/: test_validate_image.py
tests/helper/: test_arg_parser.py  test_docker.py  test_manifest_reader.py  test_print_message.py
tests/validation_tool/: test_check_inputs.py  test_validation_helper.py
tests/validation_tool/validation_tests/: test_check_envs.py  test_check_files.py  test_check_local_job_run.py  test_check_manifest.py
