[metadata]
name = amazon_emr_serverless_image_cli
version = attr: amazon_emr_serverless_image_cli.__version__
description_file = README.md

[options]
packages = find:
install_requires =
    colorlog
    docker >= 5.0.0, < 7
    PyYAML >= 5.4.1, < 7
include_package_data = True

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    amazon-emr-serverless-image = amazon_emr_serverless_image_cli.cli.cli:run

[options.package_data]
amazon_emr_serverless_image_cli =
    assets/*
